# simulating-tidal-interactions

./: README.md  pyproject.toml  tidal_interactions_0.9.py
examples/: ngc5426-7  retrograde-passage
misc/report/src/: Bibliography.bib  main.tex
misc/report/src/ngc5426/: NGC5426_0.eps  NGC5426_12.eps  NGC5426_3.eps  NGC5426_5.eps  NGC5426_7.eps
misc/report/src/num_st/: euler.eps  verlet.eps
misc/report/src/tails/: tails_17_L.eps  tails_3.eps  tails_5.eps  tails_7.eps  tails_8.eps  tails_9.eps
parameter-examples/: smaller-companion
simulation-code/: main.py
slides/heraeus-summer-school-2017/: Simulating Colliding Galaxies.pptx
src/: main.py
