[tool.poetry]
name = "simulating-tidal-interactions"
version = "0.1.0"
description = ""
authors = ["Manuel Brea <m.brea.carreras@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
astropy = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
